operations active tab

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
       </div>
       <div class="features">
         <div class="feature feature1">
-          <img src="img/digital.jpg" alt="" />
+          <img
+            src="img/digital-lazy.jpg"
+            class="feature-img img-blur"
+            alt=""
+            data-src="img/digital.jpg"
+          />
           <div class="inner-feature">
             <div class="feature-icon">
               <svg>
@@ -76,10 +81,20 @@
               quibusdam!
             </h3>
           </div>
-          <img src="img/grow.jpg" alt="" />
+          <img
+            src="img/grow-lazy.jpg"
+            class="feature-img img-blur"
+            alt=""
+            data-src="img/grow.jpg"
+          />
         </div>
         <div class="feature feature3">
-          <img src="img/card.jpg" alt="" />
+          <img
+            src="img/card-lazy.jpg"
+            class="feature-img img-blur"
+            alt=""
+            data-src="img/card.jpg"
+          />
           <div class="inner-feature">
             <div class="feature-icon">
               <svg>
@@ -103,7 +118,7 @@
       </div>
       <div class="operations-content">
         <div class="operations-btn">
-          <button class="btn transfer-btn" data-number="1">
+          <button class="btn transfer-btn active-opt-btn" data-number="1">
             01 instant Transfers
           </button>
           <button class="btn loan-btn" data-number="2">02 instant Loans</button>
