--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" href="logo.png" />
     <title>BANKIST</title>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <nav class="nav">
@@ -37,7 +38,7 @@
         </div>
       </div>
     </div>
-    <section class="section section1 hidden-section">
+    <section class="section section1">
       <div class="title">
         <h3>FEATURES</h3>
         <h1>
@@ -111,7 +112,7 @@
         </div>
       </div>
     </section>
-    <section class="section section2 hidden-section">
+    <section class="section section2">
       <div class="title">
         <h3>OPERATIONS</h3>
         <h1>Everything as simple as possible, but <br />no simpler.</h1>
@@ -182,7 +183,29 @@
         </div>
       </div>
     </section>
-    <section class="section section3 hidden-section"></section>
-    <script src="main.js"></script>
+    <section class="section section3">
+      <div class="title">
+        <h3>NOT SURE YET?</h3>
+        <h1>
+          Millions of Bankists are already making<br />
+          their lifes simpler.
+        </h1>
+      </div>
+      <div class="slider-in-section">
+        <div class="slider-icon left-slide">
+          <i class="fa-solid fa-arrow-left"></i>
+        </div>
+        <div class="slider">
+          <div class="slide slide1"><img src="/img/img-1.jpg" alt="" /></div>
+          <div class="slide slide2"><img src="/img/img-2.jpg" alt="" /></div>
+          <div class="slide slide3"><img src="/img/img-3.jpg" alt="" /></div>
+          <div class="slide slide4"><img src="/img/img-4.jpg" alt="" /></div>
+        </div>
+        <div class="slider-icon right-slide">
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+      <div class="dots"></div>
+    </section>
   </body>
 </html>
