finish ui but still there are two features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="nav-link nav-link4">Open account</li>
       </ul>
     </nav>
-    <div class="header">
+    <div class="header" id="header">
       <div class="opening">
         <div class="left-side">
           <h1>
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <section class="section section1">
+    <section class="section section1 hidden-section">
       <div class="title">
         <h3>FEATURES</h3>
         <h1>
@@ -112,7 +112,7 @@
         </div>
       </div>
     </section>
-    <section class="section section2">
+    <section class="section section2 hidden-section">
       <div class="title">
         <h3>OPERATIONS</h3>
         <h1>Everything as simple as possible, but <br />no simpler.</h1>
@@ -183,7 +183,7 @@
         </div>
       </div>
     </section>
-    <section class="section section3">
+    <section class="section section3 hidden-section">
       <div class="title">
         <h3>NOT SURE YET?</h3>
         <h1>
@@ -196,10 +196,59 @@
           <i class="fa-solid fa-arrow-left"></i>
         </div>
         <div class="slider">
-          <div class="slide slide1"><img src="/img/img-1.jpg" alt="" /></div>
-          <div class="slide slide2"><img src="/img/img-2.jpg" alt="" /></div>
-          <div class="slide slide3"><img src="/img/img-3.jpg" alt="" /></div>
-          <div class="slide slide4"><img src="/img/img-4.jpg" alt="" /></div>
+          <div class="slide slide1">
+            <h1>Best financial decision ever!</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Accusantium quas quisquam non? Quas voluptate nulla minima
+              deleniti optio ullam nesciunt, numquam corporis et asperiores
+              laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+              id alias reiciendis, perferendis facere pariatur dolore veniam
+              autem esse non voluptatem saepe provident nihil molestiae.
+            </p>
+            <div class="user">
+              <img src="img/user-1.jpg" alt="" />
+              <div class="user-info">
+                <h1>Aarav Lynn</h1>
+                <h2>San Francisco, USA</h2>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide2">
+            <h1>The last step to becoming a complete minimalist</h1>
+            <p>
+              Quisquam itaque deserunt ullam, quia ea repellendus provident,
+              ducimus neque ipsam modi voluptatibus doloremque, corrupti
+              laborum. Incidunt numquam perferendis veritatis neque repellendus.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+              deserunt exercitationem deleniti.
+            </p>
+            <div class="user">
+              <img src="img/user-2.jpg" alt="" />
+              <div class="user-info">
+                <h1>Miyah Miles</h1>
+                <h2>London, UK</h2>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide3">
+            <h1>Finally free from old-school banks</h1>
+            <p>
+              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
+              incidunt commodi architecto numquam omnis nulla autem,
+              necessitatibus blanditiis modi similique quidem. Odio aliquam
+              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
+              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
+              alias reiciendis, perferendis facere.
+            </p>
+            <div class="user">
+              <img src="img/user-3.jpg" alt="" />
+              <div class="user-info">
+                <h1>Francisco Gomes</h1>
+                <h2>Lisbon, Portugal</h2>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="slider-icon right-slide">
           <i class="fa-solid fa-arrow-right"></i>
@@ -207,5 +256,24 @@
       </div>
       <div class="dots"></div>
     </section>
+
+    <section class="section section4 hidden-section">
+      <h1>
+        The best day to join Bankist was one year ago. The second best is today!
+      </h1>
+      <button>Open your free account today!</button>
+    </section>
+    <footer>
+      <ul class="footer-links">
+        <li><a href="#header">About</a></li>
+        <li><a href="#header">Pricing</a></li>
+        <li><a href="#header">Terms of Use</a></li>
+        <li><a href="#header">Privacy Policy</a></li>
+        <li><a href="#header">Careers</a></li>
+        <li><a href="#header">Blog</a></li>
+        <li><a href="#header">Contact Us</a></li>
+      </ul>
+      <img src="img/icon.png" alt="" />
+    </footer>
   </body>
 </html>
