last two features

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img src="img/logo.png" alt="" />
       </div>
       <ul class="nav-links">
-        <li class="nav-link nav-link1">Features</li>
-        <li class="nav-link nav-link2">Operations</li>
-        <li class="nav-link nav-link3">Testimonials</li>
-        <li class="nav-link nav-link4">Open account</li>
+        <li class="nav-link nav-link1" data-section-number="1">Features</li>
+        <li class="nav-link nav-link2" data-section-number="2">Operations</li>
+        <li class="nav-link nav-link3" data-section-number="3">Testimonials</li>
+        <li class="nav-link nav-link4" data-section-number="">Open account</li>
       </ul>
     </nav>
     <div class="header" id="header">
